# fantoccini-example

./: Cargo.toml
src/: main.rs
