[package]
name = "fantoccini-example"
version = "0.1.0"
authors = ["Vypo Mouse <vypo@fursuits.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
fantoccini = "0.13.1"
tokio = { version = "0.2.21", features = ["macros"] }
